--- a/member2.html
+++ b/member2.html
@@ -1,23 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trịnh Minh Thái Tố</title>
+    <title>Thẻ Sinh Viên</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="styles.css">
 </head>
 
-<body class="bg-gray-100 font-sans min-h-screen flex items-center justify-center">
-    <div class="container mx-auto p-6">
-        <div class="bg-white rounded-lg shadow-lg p-6 max-w-md">
-            <h1 class="text-2xl font-semibold text-green-600 mb-4"> Trịnh Minh Thái Tố</h1>
-            <p class="text-gray-700 mb-2"><strong>MSSV:</strong> 2180608122</p>
-            <p class="text-gray-700 mb-2"><strong>Chuyên ngành:</strong> Công nghệ phần mềm</p>
-            <p class="text-gray-700 mb-4"><strong>Vị trí:</strong> Front-End Developer</p>
-            <a href="index.html" class="text-blue-500 hover:text-blue-700 font-semibold">Quay lại</a>
+<body class="flex items-center justify-center min-h-screen bg-gradient-to-br from-blue-100 to-blue-300">
+    <div class="bg-white p-6 rounded-2xl shadow-xl border border-blue-500 w-96 flex flex-col items-center">
+        <img src="https://scontent.fsgn1-1.fna.fbcdn.net/v/t39.30808-6/326541940_587866113171599_3301191051834831880_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHhs_Sx9StoxDucr4LgDZQvzzbf1JuuPAHPNt_Um648AauZkjdBLYErJ2_Sbo6W9dqAGkqFYfzSPm8nXaxco549&_nc_ohc=unf21uC3hBMQ7kNvgFNqYhj&_nc_oc=Adj92VEugu_Sv_MPuiG_oK_hiEF_lTC25ge3w0BKksqhEZfh_DQ4WCBuZsJzNVIywSg&_nc_zt=23&_nc_ht=scontent.fsgn1-1.fna&_nc_gid=AXxndoqx85YnrECpS0sqBlV&oh=00_AYGeUYpj-O-LVcilTC5wBZwcOLIVk0qZmdph5l_DL-34aw&oe=67D71C96"
+            alt="Logo HUTECH" class="w-24 mb-2">
+        <p class="text-blue-600 text-lg font-semibold">ĐẠI HỌC CÔNG NGHỆ TP.HCM</p>
+
+        <div class="flex items-center w-full mt-4 p-3 rounded-lg bg-gray-100 shadow-sm">
+            <img src="https://res.cloudinary.com/duvnxrvqr/image/upload/v1741768886/ydci18fgdwfaxdlp7c4o.jpg"
+                alt="Ảnh Sinh Viên" class="w-24 h-24 border-4 border-blue-300 rounded-lg shadow-md mr-4">
+            <div class="text-gray-800">
+                <h2 class="text-blue-700 text-lg font-bold">HUTECH</h2>
+                <p><strong>Họ tên:</strong> Trịnh Minh Thái Tố</p>
+                <p><strong>Ngày sinh:</strong> 06/10/2003</p>
+                <p><strong>MSSV:</strong> 2180608122</p>
+                <p><strong>Chuyên ngành:</strong> Công nghệ phần mềm</p>
+                <p><strong>Khóa:</strong> 2021 - 2025</p>
+            </div>
         </div>
+
+        <a href="index.html"
+            class="mt-5 text-white bg-blue-500 hover:bg-blue-700 font-semibold px-4 py-2 rounded-lg shadow-md transition duration-300">
+            Quay lại
+        </a>
     </div>
 </body>
 
